--- a/src/Sitecore.Support.293874/App_Config/Include/zzz/Sitecore.Support.293874.config
+++ b/src/Sitecore.Support.293874/App_Config/Include/zzz/Sitecore.Support.293874.config
@@ -1,4 +1,10 @@
 <configuration xmlns:patch="http://www.sitecore.net/xmlconfig/" xmlns:set="http://www.sitecore.net/xmlconfig/set/" xmlns:role="http://www.sitecore.net/xmlconfig/role/">
   <sitecore role:require="Standalone OR ContentManagement OR ContentDelivery OR Processing OR Reporting">
+    <pipelines>
+      <DispatchNewsletter>
+        <processor type="Sitecore.Support.EmailCampaign.Cm.Pipelines.DispatchNewsletter.PublishDispatchItems, Sitecore.Support.293874" resolve="true" 
+                   patch:instead="*[@type='Sitecore.EmailCampaign.Cm.Pipelines.DispatchNewsletter.PublishDispatchItems, Sitecore.EmailCampaign.Cm']"/>
+      </DispatchNewsletter>
+    </pipelines>
   </sitecore>
 </configuration>
