--- a/src/Sitecore.Support.293874/Sitecore.Support.293874.csproj
+++ b/src/Sitecore.Support.293874/Sitecore.Support.293874.csproj
@@ -77,7 +77,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_Config\Include\zzz\Sitecore.Support.293874.config" />
+    <Content Include="App_Config\Include\zzz\Sitecore.Support.293874.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
