--- a/src/Sitecore.Support.293874/Sitecore.Support.293874.csproj
+++ b/src/Sitecore.Support.293874/Sitecore.Support.293874.csproj
@@ -74,6 +74,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EmailCampaign\Cm\Pipelines\DispatchNewsletter\PublishDispatchItems.cs" />
+    <Compile Include="Modules\EmailCampaign\Core\PublishingTask.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
